# avatarservicenullxes

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
.github/workflows/: ci.yml
arachne_x/: __init__.py  config_realtime.py  inference_audio.py  loader.py  model_adapter.py  pipeline_arachne_x_video.py  pipeline_arachne_x_video_avatar.py  streaming_inference.py  training_latent_common.py  training_latent_export.py  training_latent_export_base.py  training_wds.py  weights_resolve.py
arachne_x/audio_process/: multi_stream_processor.py  phoneme_aligner.py  torch_utils.py  wav2vec2.py
arachne_x/context_parallel/: context_parallel_util.py
arachne_x/modules/: attention.py  avatar_losses.py  facial_anchors.py  longcat_video_dit.py  lora_utils.py  rope_3d.py  scheduling_flow_match_euler_discrete.py
arachne_x/modules/avatar/: attention.py  longcat_video_dit_avatar.py  rope_3d.py
arachne_x/speech/: __init__.py  factory.py  micro_turn.py  protocol.py
arachne_x/speech/providers/: __init__.py  edge_tts.py  espeak.py  external.py  stub.py
arachne_x/tts/: __init__.py  audiodit.py  base.py  chunking.py  factory.py  qwen.py  realtime.py
arachne_x/utils/: monitoring.py  prompt_enhancer.py
assets/avatars/: README.md
docs/: API_CONTRACT.md  ARCHITECTURE.md  RUNPOD_DEPLOYMENT.md
scripts/: download_weights.sh  install_arachne_on_pod.sh  smoke_fake_block.py  smoke_openai_peer.py
src/avatar_service/: __init__.py  __main__.py  config.py  logging.py  main.py
src/avatar_service/api/: __init__.py  errors.py  routes.py  schemas.py
src/avatar_service/bus/: __init__.py  gateway_client.py
src/avatar_service/encode/: __init__.py  nvenc_encoder.py  video_track.py
src/avatar_service/inference/: __init__.py  arachne_runtime.py  frame_pipeline.py  identity_bank.py  image_loader.py  infinitetalk_runtime.py  runtime_base.py  runtime_factory.py
src/avatar_service/media/: __init__.py  audio_ring.py  openai_peer.py  resampler.py  sfu_peer.py  vision_agents_peer.py
src/avatar_service/sessions/: __init__.py  avatar_session.py  session_manager.py
src/avatar_service/stub/: __init__.py  fake_arachne.py
src/avatar_service/sync/: __init__.py  av_clock.py
tests/: conftest.py  test_audio_ring.py  test_av_clock.py  test_fake_arachne_block.py  test_health_routes.py  test_identity_bank.py  test_image_loader.py  test_resampler.py
