[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avatar-service"
version = "0.1.0"
description = "NULLXES real-time AI avatar service (ARACHNE-X + OpenAI Realtime + Stream SFU)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NULLXES LLC", email = "ceo@nullxes.com" }]
keywords = ["ai", "avatar", "webrtc", "realtime", "arachne-x", "hr"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Multimedia :: Video",
]

dependencies = [
  # HTTP control plane
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",

  # Async + misc
  "httpx>=0.27.0",
  "anyio>=4.4.0",
  "orjson>=3.10.0",
  "python-multipart>=0.0.9",
  "PyJWT>=2.8.0",
  "structlog>=24.4.0",
  "python-dotenv>=1.0.1",

  # Observability
  "prometheus-client>=0.21.0",

  # Media
  "aiortc>=1.9.0",
  "av>=12.3.0",
  "numpy>=1.26.0",
  "pillow>=10.4.0",
  "soxr>=0.5.0",

  # Stream Video SFU client (handles WS+protobuf JoinFlow + Twirp internally).
  # `vision-agents` brings the higher-level helpers (QueuedVideoTrack etc.)
  # we may use later for processors; both pin getstream[webrtc] transitively.
  "getstream[webrtc]>=3.1.2",
  "vision-agents>=0.5.4",
]

[project.optional-dependencies]
# GPU runtime (installed on RunPod). torch / flash-attn versions pinned to match
# the ARACHNE-X-NULLXES- repo (requirements.txt from the upstream model repo).
gpu = [
  "torch==2.6.0",
  "torchvision==0.21.0",
  "torchaudio==2.6.0",
  "transformers>=4.45.0",
  "safetensors>=0.4.5",
  "einops>=0.8.0",
  "huggingface_hub>=0.26.0",
  # flash_attn is installed separately with --no-build-isolation on the pod;
  # see Dockerfile.
]

dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "types-requests",
]

[project.scripts]
avatar-service = "avatar_service.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["avatar_service*"]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008"]  # fastapi deps are Depends(...) in defaults

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "B011"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
